@@ -38,6 +38,9 @@ Sep 2011
 
   dillo-3.0.1, a bugfix release for the new 3.x series is out.
 
+Mar 2013
+
+  dillo-3.0.3, a new release for the new 3.x series is out.
 
   Jorge.-
   jcid@dillo.org
